@@ -1,16 +1,12 @@
 setGeneric("A", function(object) standardGeneric("A"))
 setGeneric("B", function(object) standardGeneric("B"))
-setGeneric("A<-", function(object, value) standardGeneric("A<-"))
-setGeneric("B<-", function(object, value) standardGeneric("B<-"))
-setGeneric("addFeatureAnnotation", function(object, ...) standardGeneric("addFeatureAnnotation"))
+##setGeneric("A<-", function(object, value) standardGeneric("A<-"))
+##setGeneric("B<-", function(object, value) standardGeneric("B<-"))
 
 setGeneric("getParam", function(object, name, batch) standardGeneric("getParam"))
-setGeneric("GT<-", function(object, value) standardGeneric("GT<-"))
 setGeneric("cnIndex", function(object) standardGeneric("cnIndex"))
 setGeneric("cnNames", function(object) standardGeneric("cnNames"))
 setGeneric("computeCopynumber", function(object, cnOptions) standardGeneric("computeCopynumber"))
-##setGeneric("GT", function(object, ...) standardGeneric("GT"))
-setGeneric(".harmonizeDimnames", function(object) standardGeneric(".harmonizeDimnames"))
 setGeneric("pr", function(object, name, batch, value) standardGeneric("pr"))
 setGeneric("snpIndex", function(object) standardGeneric("snpIndex"))
 setGeneric("snpNames", function(object) standardGeneric("snpNames"))
